[gd_scene load_steps=7 format=2]

[ext_resource path="res://Theme/Theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Profile.gd" type="Script" id=2]
[ext_resource path="res://images/trade_mode/box.png" type="Texture2D" id=3]
[ext_resource path="res://images/default.png" type="Texture2D" id=4]
[ext_resource path="res://images/Menu_interface/online_texture.png" type="Texture2D" id=5]
[ext_resource path="res://images/Menu_interface/global_points.png" type="Texture2D" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -880.0
offset_bottom = -570.0
custom_minimum_size = Vector2( 400, 150 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
offset_right = 400.0
offset_bottom = 200.0
scale = Vector2( 1, 0.75 )
texture = ExtResource( 3 )

[node name="ProfilePicTexture" type="TextureRect" parent="."]
offset_left = 24.4352
offset_top = 35.0238
offset_right = 94.4352
offset_bottom = 115.024
texture = ExtResource( 4 )

[node name="GlobalPointsLabel" type="Label" parent="."]
offset_left = 249.0
offset_top = 65.4518
offset_right = 290.0
offset_bottom = 91.4518
grow_horizontal = 0

[node name="UserNameLabel" type="Label" parent="."]
offset_left = 222.476
offset_top = 18.4519
offset_right = 237.476
offset_bottom = 44.4519
grow_horizontal = 2
text = "A"

[node name="OnlinestatusLabel" type="Label" parent="."]
offset_left = 201.183
offset_top = 109.144
offset_right = 280.183
offset_bottom = 135.144
text = "ONLINE"

[node name="OnlineStatusTexure" type="TextureRect" parent="OnlinestatusLabel"]
offset_left = -44.7978
offset_top = -10.5886
offset_right = 5.20218
offset_bottom = 39.4114
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="GlobalPointsTexture" type="TextureRect" parent="."]
offset_left = 294.612
offset_top = 59.7503
offset_right = 394.612
offset_bottom = 159.75
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )
